--- a/src/app/intranet/informacion/informacion.component.html
+++ b/src/app/intranet/informacion/informacion.component.html
@@ -1,1 +1,200 @@
-<p>informacion works!</p>
+<body>
+<section class="contenedor2" id="informacion1">
+  <div>
+    <div class="alimentos">
+      <div class="header2">
+        <h1 style="font-size: 16px;">Información nutricional</h1>
+      </div>
+      <div class="botones">
+        <button class="carrosel"><p><</p></button>
+        <a href="#">
+          <button (click)="info1()" class="activo">Huevos</button>
+        </a>
+        <a href="#">
+          <button (click)="info2()" class="boton">Avena</button>
+        </a>
+        <a href="#">
+          <button (click)="info3()" class="boton">Pollo</button>
+        </a>
+        <a href="#">
+          <button (click)="info4()" class="boton">Espinaca</button>
+        </a>
+        <button class="carrosel"><p>></p></button>
+      </div>
+    </div>
+    <div class="grancontenedor">
+      <div class="infohuevos">
+        <ul>
+          <li>Calorías: 68 kcal</li>
+          <li>Proteínas: 5.5 g</li>
+          <li>Grasas totales: 4.8 g</li>
+          <li style="margin-left: 30px;">Grasas saturadas: 1.6 g</li>
+          <li style="margin-left: 30px;">Grasas monoinsaturadas: 2.0 g</li>
+          <li style="margin-left: 30px;">Grasas poliinsaturadas: 0.7 g</li>
+          <li>Carbohidratos: 0.6 g</li>
+          <li style="margin-left: 30px;">Azúcares: 0.6 g</li>
+          <li>Fibra: 0 g</li>
+          <li>Colesterol: 186 mg</li>
+          <li>Vitaminas y minerales importantes:</li>
+          <li style="margin-left: 30px;">Vitamina A: 75.3 mcg</li>
+          <li style="margin-left: 30px;">Vitamina D: 44 IU</li>
+          <li style="margin-left: 30px;">Vitamina B12: 0.6 mcg</li>
+          <li style="margin-left: 30px;">Hierro: 0.9 mg</li>
+        </ul>
+        <div>
+          <img src="./assets//Huevos.jpg">
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+<section class="contenedor2" id="informacion2">
+  <div>
+    <div class="alimentos">
+      <div class="header2">
+        <h1 style="font-size: 16px;">Información nutricional</h1>
+      </div>
+      <div class="botones">
+        <button class="carrosel"><p><</p></button>
+        <a href="#">
+          <button (click)="info1()" class="boton">Huevos</button>
+        </a>
+        <a href="#">
+          <button (click)="info2()" class="activo">Avena</button>
+        </a>
+        <a href="#">
+          <button (click)="info3()" class="boton">Pollo</button>
+        </a>
+        <a href="#">
+          <button (click)="info4()" class="boton">Espinaca</button>
+        </a>
+        <button class="carrosel"><p>></p></button>
+      </div>
+    </div>
+    <div class="grancontenedor">
+      <div class="infohuevos">
+        <ul>
+          <li>Calorías: 148 kcal</li>
+          <li>Proteínas: 5.3 g</li>
+          <li>Grasas totales: 2.7 g</li>
+          <li style="margin-left: 30px;">Grasas saturadas: 0.5 g</li>
+          <li style="margin-left: 30px;">Grasas monoinsaturadas: 0.8 g</li>
+          <li style="margin-left: 30px;">Grasas poliinsaturadas: 0.8 g</li>
+          <li>Carbohidratos: 27.3 g</li>
+          <li style="margin-left: 30px;">Azúcares: 0.5 g</li>
+          <li>Fibra: 3.9 g</li>
+          <li>Colesterol: 0 mg</li>
+          <li>Vitaminas y minerales importantes:</li>
+          <li style="margin-left: 30px;">Calcio: 20.8 mg</li>
+          <li style="margin-left: 30px;">Hierro: 1.5 mg</li>
+          <li style="margin-left: 30px;">Magnesio: 48 mg</li>
+        </ul>
+        <div>
+          <img src="./assets//Huevos.jpg">
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+<section class="contenedor2" id="informacion3">
+  <div>
+    <div class="alimentos">
+      <div class="header2">
+        <h1 style="font-size: 16px;">Información nutricional</h1>
+      </div>
+      <div class="botones">
+        <button class="carrosel"><p><</p></button>
+        <a href="#">
+          <button (click)="info1()" class="boton">Huevos</button>
+        </a>
+        <a href="#">
+          <button (click)="info2()" class="boton">Avena</button>
+        </a>
+        <a href="#">
+          <button (click)="info3()" class="activo">Pollo</button>
+        </a>
+        <a href="#">
+          <button (click)="info4()" class="boton">Espinaca</button>
+        </a>
+        <button class="carrosel"><p>></p></button>
+      </div>
+    </div>
+    <div class="grancontenedor">
+      <div class="infohuevos">
+        <ul>
+          <li>Calorías: 165 kcal</li>
+          <li>Proteínas: 31 g</li>
+          <li>Grasas totales: 3.6 g</li>
+          <li style="margin-left: 30px;">Grasas saturadas: 1.0 g</li>
+          <li style="margin-left: 30px;">Grasas monoinsaturadas: 1.1 g</li>
+          <li style="margin-left: 30px;">Grasas poliinsaturadas: 0.9 g</li>
+          <li>Carbohidratos: 0 g</li>
+          <li>Fibra: 0 g</li>
+          <li>Colesterol: 85 mg</li>
+          <li>Vitaminas y minerales importantes:</li>
+          <li style="margin-left: 30px;">Vitamina B6: 0.7 mg</li>
+          <li style="margin-left: 30px;">Fósforo: 236 mg</li>
+          <li style="margin-left: 30px;">Selenio: 27.3 mcg</li>
+        </ul>
+        <div>
+          <img src="./assets//Huevos.jpg">
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+<section class="contenedor2" id="informacion4">
+  <div>
+    <div class="alimentos">
+      <div class="header2">
+        <h1 style="font-size: 16px;">Información nutricional</h1>
+      </div>
+      <div class="botones">
+        <button class="carrosel"><p><</p></button>
+        <a href="#">
+          <button (click)="info1()" class="boton">Huevos</button>
+        </a>
+        <a href="#">
+          <button (click)="info2()" class="boton">Avena</button>
+        </a>
+        <a href="#">
+          <button (click)="info3()" class="boton">Pollo</button>
+        </a>
+        <a href="#">
+          <button (click)="info4()" class="activo">Espinaca</button>
+        </a>
+        <button class="carrosel"><p>></p></button>
+      </div>
+    </div>
+    <div class="grancontenedor">
+      <div class="infohuevos">
+        <ul>
+          <li>Calorías: 23 kcal</li>
+          <li>Proteínas: 2.9 g</li>
+          <li>Grasas totales: 0.4 g</li>
+          <li style="margin-left: 30px;">Grasas saturadas: 0.1 g</li>
+          <li style="margin-left: 30px;">Grasas monoinsaturadas: 0.1 g</li>
+          <li style="margin-left: 30px;">Grasas poliinsaturadas: 0.2 g</li>
+          <li>Carbohidratos: 3.6 g</li>
+          <li style="margin-left: 30px;">Azúcares: 0.4 g</li>
+          <li>Fibra: 2.2 g</li>
+          <li>Colesterol: 0 mg</li>
+          <li>Vitaminas y minerales importantes:</li>
+          <li style="margin-left: 30px;">Vitamina A: 469 mcg</li>
+          <li style="margin-left: 30px;">Vitamina C: 47.9 mg</li>
+          <li style="margin-left: 30px;">Hierro: 2.7 mg</li>
+          <li style="margin-left: 30px;">Calcio: 99 mg</li>
+        </ul>
+        <div>
+          <img src="./assets//Huevos.jpg">
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+
+</body>
