--- a/src/app/intranet/intranet.component.html
+++ b/src/app/intranet/intranet.component.html
@@ -1,3 +1,5 @@
 <app-navbar-intranet></app-navbar-intranet>
-<router-outlet></router-outlet>
+<main>
+    <router-outlet></router-outlet>
+</main>
 <app-footer-intranet></app-footer-intranet>
